--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>2048</title>
 </head>
 
@@ -36,7 +36,7 @@
             </div>
         </div>
     </section>
-    <script src="./js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
