Jogo completo, só falta os finais e refatorar pq tá uma merda

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,27 +11,28 @@
     <body>
         <section class="game-section">
             <div class="game-container">
-                <span class="game-title">Dois mil e quarenta e oito</span>
+                <span class="game-title">2048</span>
                 <div class="game">
                     <div class="game-grid">
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
-                        <div class="game-squares"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
+                        <div class="game-squares hover"></div>
                     </div>
                 </div>
+                <button class="desfazer hover">Desfazer</button>
             </div>
         </section>
         <script src="./assets/js/bundle.js"></script>
